ossm2/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL # For TLS only use SIMPLE, for mTLS use MUTUAL
      credentialName: frontend-credential
    hosts:
    - 'frontend-DATA_PLANE.DOMAIN'
