ossm2/istio/frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend.DOMAIN
  gateways:
  - frontend-gateway.CONTROL_PLANE.svc.cluster.local
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: frontend.DATA_PLANE.svc.cluster.local
